fix: minor changes in login component

--- a/src/lib/shared/ui/components/login/Login.css
+++ b/src/lib/shared/ui/components/login/Login.css
@@ -1,16 +1,24 @@
 @import "tailwindcss";
 
 main {
-  @apply min-h-screen flex justify-center items-center bg-[#020b14];
-  background-image: linear-gradient(to bottom left, #004080 20%, transparent 40%);
+  @apply min-h-screen flex justify-center items-center bg-[#000910];
+  background: linear-gradient(
+    190deg,
+    #039FF1 0%,
+    #074F88 9%,
+    #005698 20%,
+    #001423 32%,
+    #000910 50%,
+    #000000 100%
+  );
   background-repeat: no-repeat;
   background-position: top right;
-  background-size: 140% 45%;
+  background-color: #000;
 }
 
 .container {
   @apply w-[90%] max-w-[700px] 
-  border border-white 
+  border-2 border-white 
   rounded-[40px] lg:rounded-[80px] md:rounded-[80px] sm:rounded-[80px]
   bg-transparent 
   flex justify-center items-center 
@@ -24,14 +32,14 @@ main {
 }
 
 .login h2 {
-  @apply mb-6 text-[26px] lg:text-[30px] font-light font-sans;
+  @apply mb-6 text-[26px] lg:text-[30px] font-sans;
 }
 
 .login input {
   @apply w-full h-[45px] lg:h-[50px] 
   rounded-[10px] mb-[20px] 
-  bg-[#004466] 
-  border border-cyan-400 
+  bg-[#305168] 
+  border-2 border-[#7EC8FD]
   px-4 text-white;
 }
 
@@ -51,5 +59,5 @@ input::placeholder {
   @apply mt-[30px] w-full sm:w-[70%] md:w-[60%] lg:w-[50%] h-[40px] 
   rounded-full mb-[20px] lg:mb-[30px] lg:mt-[50px] md:mb-[30px] md:mt-[50px]
   text-white border-none 
-  bg-gradient-to-r from-[#004080] to-[#33ccff];
+  bg-gradient-to-r from-[#00121f] to-[#06baf1];
 }
